# wzgui

./: CMakeLists.txt  audio_decision.md
CMakeModules/: FindGTK3.cmake  FindMPG123.cmake  FindPortAudio.cmake
src/: CMakeLists.txt  file_tree_store.c  file_tree_store.h  main.c  var_grid.c  var_grid.h
